Refactor SecurityConfig for CORS and JWT filter